k8s/ingestionservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingestionservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingestionservice
  template:
    metadata:
      labels:
        app: ingestionservice
    spec:
      containers:
        - name: ingestionservice
          image: ingestionservice:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5050
---
apiVersion: v1
kind: Service
metadata:
  name: ingestionservice
spec:
  selector:
    app: ingestionservice
  ports:
    - port: 5050
      targetPort: 5050
  type: ClusterIP
