k8s/notificationservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notificationservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notificationservice
  template:
    metadata:
      labels:
        app: notificationservice
    spec:
      containers:
        - name: notificationservice
          image: notificationservice:latest
          imagePullPolicy: Never   # koristi lokalni image iz Minikube-a, ne pokusava da skine sa interneta
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: notificationservice
spec:
  selector:
    app: notificationservice
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP   # dostupno samo unutar clustera (Ingress ce ga "izloziti" napolje kasnije)
